--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,12 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "noImplicitAny": true,
+    "jsx": "react-native",
+    "lib": ["ESNext"],
+    "skipLibCheck": true,
+    "allowJs": true,
+    "moduleResolution": "node",
     "paths": {
       "@/*": [
         "./*"
