--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start:dev": "EXPO_PUBLIC_ENV=dev expo start",
+    "start:staging": "EXPO_PUBLIC_ENV=staging expo start",
+    "start:prod": "EXPO_PUBLIC_ENV=prod expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
