--- a/package.json
+++ b/package.json
@@ -53,9 +53,12 @@
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "axios-mock-adapter": "^2.1.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.4",
     "msw": "^2.7.3",
+    "prettier": "^3.5.3",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.8.2"
   },
