--- a/.prettierrc
+++ b/.prettierrc
@@ -5,11 +5,5 @@
   "arrowParens": "always",
   "bracketSameLine": true,
   "trailingComma": "all",
-  "printWidth": 100,
-  "plugins": ["@ianvs/prettier-plugin-sort-imports"],
-  "pluginSearchDirs": ["."],
-  "importOrder": ["^react", "^react-native", "^expo", "<THIRD_PARTY_MODULES>", "", "^[./]"],
-  "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true,
-  "importOrderCaseSensitive": false
+  "printWidth": 100
 }
