--- a/package.json
+++ b/package.json
@@ -46,17 +46,20 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.12",
     "@types/react": "^19.0.10",
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
     "axios-mock-adapter": "^2.1.0",
-    "eslint-config-prettier": "^10.1.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.4",
     "msw": "^2.7.3",
