--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start:dev": "EXPO_PUBLIC_ENV=dev expo start",
-    "start:staging": "EXPO_PUBLIC_ENV=staging expo start",
-    "start:prod": "EXPO_PUBLIC_ENV=prod expo start",
+    "start:dev": "NODE_ENV=development expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
