--- a/app.json
+++ b/app.json
@@ -46,6 +46,7 @@
       "eas": {
         "projectId": "17fba524-5c63-4380-bba3-8137a64a1f7b"
       }
-    }
+    },
+    "owner": "rogerparis"
   }
 }
