--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "expo-dev-client": "^5.0.12",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.4",
     "msw": "^2.7.3",
