--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.13.4",
     "@expo/vector-icons": "^14.0.2",
     "@sentry/react-native": "^6.9.1",
     "axios": "^1.8.2",
@@ -35,6 +36,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "graphql": "^16.10.0",
     "immer": "^10.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
