--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="myapp"/>
         <data android:scheme="com.rogerparis.RecipeFinder"/>
+        <data android:scheme="exp+recipefinder"/>
       </intent-filter>
     </activity>
   </application>
