--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   "dependencies": {
     "@apollo/client": "^3.13.4",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-firebase/app": "^21.12.2",
+    "@react-native-firebase/auth": "^21.12.2",
     "@sentry/react-native": "^6.9.1",
     "axios": "^1.8.2",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
+    "expo-build-properties": "~0.13.2",
     "expo-constants": "^17.0.7",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
