--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <data android:scheme="myapp"/>
         <data android:scheme="com.rogerparis.RecipeFinder"/>
         <data android:scheme="exp+recipefinder"/>
+        <data android:scheme="recipefinder"/>
       </intent-filter>
     </activity>
   </application>
