--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "expo-web-browser": "~14.0.2",
     "graphql": "^16.10.0",
     "immer": "^10.1.1",
+    "lodash": "^4.17.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -60,6 +61,7 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.16",
     "@types/react": "^18.3.12",
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
