--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "graphql": "^16.10.0",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
+    "lottie-react-native": "7.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
